--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Jiwoong (Gio)
+first_name: Test
 middle_name: 
 last_name: Choi
 email: jiwung22@gmail.com
