--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Jiwoong (Gio)
 middle_name: 
 last_name: Choi
-email: jiwung22@gmail.com
+email: giochoi@uchicago.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Jiwoong (Gio) Choi Portfolio
 footer_text:  
