--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,7 @@
     - name: Name
       value: Jiwoong (Gio) Choi
     - name: Email
-      value: <a href=mailto:jiwung22@gmail.com> jiwung22@gmail.com </a>
+      value: <a href=mailto:giochoi@uchicago.edu> giochoi@uchicago.edu </a>
     - name: Url
       value: <a href=https://gio-choi.github.io> https://gio-choi.github.io </a>
     - name : Linkedin
