--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -32,7 +32,7 @@
 
     - title: <a href=https://www.khu.ac.kr/eng/main/index.do> Bachelor of Economics <br> Bachelor of Engineering in Data Science </a>
       institution: Kyung Hee University, Seoul, South Korea
-      year: 2017 - 2023
+      year: Feb 2024
       
 
 - title: Work
