--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -39,7 +39,7 @@
   type: time_table
   contents:
     - title: Sustainability & Climate Research Intern
-      maindescription: <i> MSCI </i>
+      maindescription: <i> MSCI Inc.</i>
       location: Seoul
       year: 03.24-08.24
       description: 
@@ -95,8 +95,8 @@
   contents:
     - year: 2024
       items:
-        - <b>Korea discount and corporate governance </b>, SK Kim, Ye Jun Kim, <b>Gio (Jiwoong) Choi<b/>, <b> MSCI Inc. </b> 
-        - <b>ASEAN Gender Outlook 2024</b>:Achieving the SDGs for all and leaving no women or girl behind, <b> United Nations </b>
+        - <b>Korea discount and corporate governance</b>, SK Kim, Ye Jun Kim, <b>Gio (Jiwoong) Choi<b/>, <b>MSCI Inc. </b> 
+        - <b>ASEAN Gender Outlook 2024</b>- Achieving the SDGs for all and leaving no women or girl behind, <b> United Nations </b>
     - year: 2022
       items:
         - <b>Outdoor visual SLAM and Path Planning for Mobile-Robot</b>, S. Heo, J. Mun, <b>J. Choi</b>, J. Park and E. T. Matson, 2022 Sixth IEEE International Conference on Robotic Computing (IRC), Italy, 2022, pp. 296-301         
