--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -71,9 +71,9 @@
       location: Indiana, US
       year: 04.22 - 08.22
       description:
-        - § Developed the perception system for Autonomous Vehicles using ROS and Linux with C++
-        - § Selected as a national scholar in Computer Science to conduct research with a full scholarship and stipend.
-        - § Co-authored a research paper, published at IEEE International Conference on Robotic Computing (IRC), Italy, 2022
+        - Developed the perception system for Autonomous Vehicles using ROS and Linux with C++
+        - Selected as a national scholar in Computer Science to conduct research with a full scholarship and stipend.
+        - Co-authored a research paper, published at IEEE International Conference on Robotic Computing (IRC), Italy, 2022
 
     - title: IT Audit Intern
       maindescription: <i> PricewaterhouseCoopers (PwC) SAMIL </i>
