--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,7 @@
       #       - Sub-description 1.
       #       - Sub-description 2.
     - title: <a href=https://www.purdue.edu> Visiting Scholar, Department of Computer & IT </a>
-      institution: Purdue University, West Lafayette, ID, US      
+      institution: Purdue University, West Lafayette, IN, US      
       year: 2022
       # description:
       #   - Description 1.
@@ -90,7 +90,7 @@
       location: Seoul
       year: 2018 - 2020
 
-- title: Publication
+- title: Publications
   type: time_table
   contents:
     - year: 2024
